--- a/greenwood/windows/ui/login.ui
+++ b/greenwood/windows/ui/login.ui
@@ -91,7 +91,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="logInButton">
    <property name="geometry">
     <rect>
      <x>100</x>
